# shvcli

./: .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  README.rst  flake.nix  mypy.ini  pyproject.toml  release.sh  testapp.py
docs/: conf.py  index.rst
shvcli/: __init__.py  __main__.py  afterconn.py  args.py  builtin.py  builtin_impl.py  cli.py  client.py  cliitems.py  complet.py  complet_tools.py  config.py  file.py  lsdir.py  oauth.py  option.py  options.py  parse.py  path.py  plugins.py  scan.py  state.py  tools.py  tree.py  url.py  valid.py
shvcli/builtins/: __init__.py  broker.py  cd.py  file.py  help.py  history.py  scan.py  set.py  tree.py
shvcli/tools/: __init__.py  complet.py  print.py
