[project]
name = "shvcli"
description = "Silicon Heaven CLI access application"
readme = "README.rst"
license = {file = "LICENSE"}
dynamic = ["version"]
authors = [
  { name="Elektroline a.s." },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Home Automation",
  "Topic :: System :: Shells",
  "Topic :: Terminals",
]
requires-python = ">=3.11"
dependencies = [
  "pyshv >= 0.5.0",
  "prompt_toolkit",
  "pyxdg",
]

[project.urls]
repository = "https://gitlab.com/elektroline-predator/shvcli"

[project.optional-dependencies]
lint = [
  "black",
  "isort",
  "mypy",
  "pydocstyle",
  "pylint",
]

[project.scripts]
shvcli = "shvcli.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = "shvcli/version"}
[tool.setuptools.package-data]
"*" = ["version", "py.typed"]

[tool.coverage.run]
branch = true
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if typing.TYPE_CHECKING:"
]

[tool.isort]
profile = 'black'

[tool.pylint.main]
recursive = "y"
fail-under = 9.5
[tool.pylint.format]
disable = [
  # Exception can be safely caught because there is BaseException for unsafe
  # ones (such as SystemExit) and there are reasons to catch all exceptions.
  "W0718",
  # Prevent usage of module name in documentation (seems unreasonable)
  "C0104",
  # We have pydocstyle for the following ones
  "C0103", "C0114", "C0115", "C0116",
]
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
max-line-length = 88

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.pydocstyle]
convention = "pep257"
